sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:17: error: ';' expected but identifier found.
}a 
 ^